@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix too many :nodoc: tags so that rdocs are generated properly
+
 *0.0.1* (August 16th, 2007)
 
 * Add README documentation
